# gerrymandering_australia

./: .gitignore  README.md  create_voronoi.py  explore_booths.ipynb  ip.ipynb  pyproject.toml  todo.md
explore/: booth_preferences.ipynb  create_voronoi.py  ip.ipynb
