[project]
name = "gerrymandering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
]
